# phish-guard-pro

./: .env.example  .gitignore  README.md  TEST_EMAILS.md
backend/: pyproject.toml
backend/src/phishguard/: __init__.py  main.py
backend/src/phishguard/agents/: conversation.py  intel_collector.py  persona_engine.py  profiler.py
backend/src/phishguard/analyzers/: __init__.py  personalization.py  urgency.py
backend/src/phishguard/api/: auth.py  dependencies.py  health.py
backend/src/phishguard/core/: __init__.py  retry.py
backend/src/phishguard/llm/: __init__.py  client.py
backend/src/phishguard/models/: classification.py  conversation.py  email.py  error_models.py  ioc.py  risk_score.py  summary.py
backend/src/phishguard/orchestrator/: __init__.py  checkpointer.py  graph.py  nodes.py  state.py
backend/src/phishguard/safety/: __init__.py  output_validator.py  unmasking_detector.py
backend/src/phishguard/services/: __init__.py  enrichment_service.py  risk_score_service.py  session_service.py
backend/tests/: conftest.py  test_auth.py  test_email_analysis.py  test_health.py
backend/tests/agents/: test_profiler.py
backend/tests/integration/: test_intel_dashboard.py  test_response_generation.py
backend/tests/models/: test_classification.py
backend/tests/unit/: test_unmasking_detector.py
backend/tests/unit/agents/: test_conversation.py  (+2 more)
legacy_mvp/: .cursorignore  .gitignore  LICENSE  README.md  pyproject.toml
legacy_mvp/.ai/: prd.md  project.md
legacy_mvp/.claude/: CLAUDE.md
legacy_mvp/.claude/agents/: project-orchestrator.md  prompt-engineer.md  python-backend-dev.md  streamlit-frontend-dev.md
legacy_mvp/docs/: testing.md
legacy_mvp/src/phishguard/: export.py
legacy_mvp/tests/: test_export.py  test_input_sanitizer.py
legacy_mvp/tests/agents/: __init__.py  test_conversation.py  test_intel_collector.py  test_persona_engine.py  test_profiler.py
legacy_mvp/tests/integration/: __init__.py  test_classification_flow.py
legacy_mvp/tests/models/: __init__.py  test_classification.py  test_conversation.py  test_demo.py  test_email.py  test_persona.py  test_risk.py  test_session.py  test_summary.py  test_thinking.py
legacy_mvp/tests/safety/: test_output_validator.py  test_unmasking_detector.py
legacy_mvp/tests/ui/: test_error_display.py
(+200 files in other folders)
