[project]
name = "phishguard"
version = "0.1.0"
description = "Autonomous agent-based system for Active Defense against phishing"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.14.0",
    "streamlit>=1.52.0",
    "pydantic>=2.12.0",
    "faker>=39.0.0",
    "python-dotenv>=1.0.0",
    "st-copy-to-clipboard>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phishguard"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
